feat: Add Black-Scholes Greeks solver, width validation, and EOD exit
- Added src/analytics/greeks.py with BlackScholesSolver for IV and Delta calculation
- Integrated Greeks enrichment into src/data/loaders.py for real-time Delta on quotes
- Simplified condor_builder.py to use pre-calculated Delta from loader
- Added max width validation (3x target) to reject unrealistic trades
- Added EOD auto-exit to close trades at end of day
- Fixed time comparison bug (>= instead of ==) for entry logic
- Updated configs/test_quick.yaml with realistic SPX width (50pt)
- Added market regime filters to simulator

Backtest results now show realistic trade entries with symmetric strikes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,13 @@ dependencies = [
 ]
 requires-python = ">=3.9"
 
+[project.optional-dependencies]
+test = ["pytest"]
+
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["."]
+include = ["src*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
