--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -26,9 +26,11 @@ exit:
 
 # --- Simulation Settings ---
 simulation:
-  commission_per_leg: 0.65
-  slippage_per_leg: 0.00   # Additional slippage (conservatively built into bid/ask usage)
-  capital: 10000           # Simulation capital (not strictly used for RoR but for portfolio view)
+  contract_multiplier: 100 # SPX Standard
+  commission_per_leg: 1.50 # $1.50 per contract (conservative)
+  slippage_per_leg: 0.05   # 0.05 pts ($5.00) phantom slippage on exit
+  max_daily_loss: 3000     # Kill Switch ($3k)
+  capital: 100000          # Initial Capital for RoR ($100k)
   
 # --- Data Settings ---
 data:
