--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -1,7 +1,7 @@
-# Base Configuration for SPX 0DTE Iron Condor
+# Base Configuration for XSP 0DTE Iron Condor
 
 # --- Global Settings ---
-ticker: "SPX"
+ticker: "XSP"
 timezone: "US/Eastern"
 currency: "USD"
 
@@ -9,10 +9,10 @@ currency: "USD"
 strategy:
   entry_time: "10:00"      # HH:MM (Strict Ingresarios Start)
   target_delta: 0.10       # Target delta (OTM)
-  width: 10                # Spread width (Strict Ingresarios risk)
+  width: 1.0               # Spread width (XSP Standard)
   
   # Liquidity Gates
-  min_credit: 0.50         # Minimum credit to enter
+  min_credit: 0.10         # Minimum credit to enter
   min_ror: 0.05            # Minimum Return on Risk
   max_spread_pct: 5.00     # Max relative spread
   max_spread_abs: 5.00     # Max absolute spread
@@ -26,8 +26,8 @@ exit:
 
 # --- Simulation Settings ---
 simulation:
-  contract_multiplier: 100 # SPX Standard
-  commission_per_leg: 1.50 # $1.50 per contract (conservative)
+  contract_multiplier: 100 # XSP Standard
+  commission_per_leg: 0.65 # $0.65 per contract (IBKR)
   slippage_per_leg: 0.05   # 0.05 pts ($5.00) phantom slippage on exit
   max_daily_loss: 3000     # Kill Switch ($3k)
   capital: 100000          # Initial Capital for RoR ($100k)
