security: Implement XSP Safety Protocol (VIX<25, Width 1.0, Credit>0.10)

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -42,8 +42,8 @@ data:
 
 # --- Risk Filters (FOMC/CPI/High Vol Days) ---
 filters:
-  min_vix: 12.0              # Skip days with VIX below this (low vol = poor premium)
-  max_vix: 40.0              # Skip days with VIX above this (extreme risk)
+  min_vix: 10.0              # Skip days with VIX below this (low vol = poor premium)
+  max_vix: 25.0              # KILL SWITCH: Skip days with VIX above 25.0 (extreme risk)
   exclude_dates:             # Blacklist dates (FOMC, CPI, NFP, etc.)
     - "2023-01-25"           # FOMC
     - "2023-02-01"           # FOMC
