feat: Add Time Gate (No trading before 10:00 AM ET)

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -44,6 +44,7 @@ data:
 filters:
   min_vix: 10.0              # Skip days with VIX below this (low vol = poor premium)
   max_vix: 25.0              # KILL SWITCH: Skip days with VIX above 25.0 (extreme risk)
+  start_time: "10:00"        # TIME GATE: No trading before 10:00 AM ET
   
 risk:
   min_account_value: 1400.0  # HARD STOP: Si Equity < $1400, apagar sistema.
