Fix Pricing Pipeline & Implement True 0DTE Logic (Fixes 1-5)

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -4,6 +4,7 @@
 ticker: "XSP"
 timezone: "US/Eastern"
 currency: "USD"
+wing_width: 2.0  # Shared Wing Width for Scanner & Executor
 
 # --- IBKR Connection Settings ---
 ibkr:
